Fixed all rounders not showing up on tier list

--- a/frontend/src/components/mainComponents/css/tierList.css
+++ b/frontend/src/components/mainComponents/css/tierList.css
@@ -119,7 +119,7 @@
     padding: 5px;
 }
 
-.draggable-item.All-Rounder {
+.draggable-item.All_Rounder {
     background-image: linear-gradient(
         45deg,
         purple 0%,
